[metadata]
# replace with your username:
name = redisssh-un1tz3r0
version = 0.0.1
author = Victor Condino
author_email = un1tz3r0@gmail.com
description = Redis tunneled over SSH
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/un1tz3r0/redisssh
project_urls =
    Bug Tracker = https://github.com/un1tz3r0/redisssh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    redis
    paramiko